--- a/style.css
+++ b/style.css
@@ -1,16 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 
-:root {
-  /* Colors: */
-  --unnamed-color-d2d2d2: #d2d2d2;
-  --unnamed-color-222222: #222222;
-  --unnamed-color-4f79dc: #4f79dc;
-  --unnamed-color-ececec: #ececec;
-  --unnamed-color-ffffff: #ffffff;
-  --unnamed-color-b9d6e3: #b9d6e3;
-  --unnamed-color-707070: #707070;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -61,7 +50,7 @@ body {
 
 .logo {
   margin-left: 24px;
-  color: var(--unnamed-color-ffffff);
+  color: #ffffff;
   width: 105px;
   height: 28px;
   background: #4f79dc 0% 0% no-repeat padding-box;
@@ -91,7 +80,7 @@ body {
 .display {
   width: 364px;
   height: 170px;
-  background-color: var(--unnamed-color-ececec);
+  background-color: #ececec;
   border-radius: 4px 4px 0px 0px;
 }
 .display_dark {
@@ -150,7 +139,7 @@ body {
 
 .btn > span {
     font-size: 34px;
-    color: var(--unnamed-color-707070);
+    color: #707070;
     display: flex;
     justify-content: center;
     align-items: center;
